--- a/chornado_app/templates/children/_child_base.html
+++ b/chornado_app/templates/children/_child_base.html
@@ -6,12 +6,13 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
         <link href="/static/styles.css" rel="stylesheet">
         <title>Chornado</title>
+        <link rel="icon" type="image/x-icon" href="../static/img/favicon.ico">
     </head>
     <body id="bodyBG">
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg sticky-top" id="navBar">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/"><img src="./resources/logo-small.png" alt="Chornado Logo"></a> <!-- Update logo -->
+            <a class="navbar-brand" href="/"><img src="../static/img/logo_white.png" alt="Chornado Logo" height="50"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -33,15 +34,16 @@
     <div class="row">
         <div class="col-xl-8 col-11 m-4 mx-xl-auto py-2 rounded" id="bodyMain">
             <div class="row">
+                <div class="col">
                 {% with success = get_flashed_messages(category_filter=["success"]) %}
                     {% if success %}
                         <div class="alert alert-success d-flex align-items-center" role="alert">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-check-circle-fill" viewBox="0 0 16 16">
                                 <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
                             </svg>
-                            <ul class="flashes">
+                            <ul class="list-group-flush flashes">
                                 {% for message in success %}
-                                    <li>{{ message }}</li>
+                                    <li class="list-group-item notification">{{ message }}</li>
                                 {% endfor %}
                             </ul>
                         </div>
@@ -53,14 +55,15 @@
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16">
                             <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
                         </svg>
-                        <ul class="flashes">
+                        <ul class="list-group-flush flashes">
                             {% for message in error %}
-                                <li>{{ message }}</li>
+                                <li class="list-group-item">{{ message }}</li>
                             {% endfor %}
                         </ul>
                     </div>
                     {% endif %}
                 {% endwith %}
+                </div>
             </div>
             {% block content %}{% endblock %}            
         </div>
