--- a/chornado_app/templates/delete_parent.html
+++ b/chornado_app/templates/delete_parent.html
@@ -1,13 +1,19 @@
 {% extends "parents/_parent_base.html" %}
 
 {% block content %}
-    <div class="row">
-        <h3>Are you sure you want to delete {{ user.first_name }}?</h3>
+<div class="row my-3">
+    <div class="col-10 col-md-8 col-lg-10 mx-auto">
+        <h3 class="text-center">Are you sure you want to delete your account? All data will be erased.</h3>
+    </div>
+</div>
+<div class="row my-3">
+    <div class="col my-1 text-center">
         <form action="/delete_parent/{{ user.id }}" method="post">
             {{ template_form.csrf_token() }}
             {{ template_form.user_id(value=user.id) }}
-            {{ template_form.delete(class="btn btn-secondary") }}
-            <a href="{{ url_for('routes.index') }}"><button type="button" class="btn btn-secondary">Cancel</button></a>
+            {{ template_form.delete(class="btn btn-danger") }}
+            <a href="{{ url_for('routes.index') }}"><button type="button" class="btn btn-primary">Cancel</button></a>
         </form>
     </div>
+</div>
  {% endblock %}
