--- a/chornado_app/templates/index.html
+++ b/chornado_app/templates/index.html
@@ -1,7 +1,28 @@
 {% extends "_base.html" %}
 
 {% block content %}
-    <div class="row">
-        <p>Welcome to Chornado</p>
+<div class="row my-5">
+    <div class="col-6 mx-auto">
+            <img src="./static/img/logo_colour.png" alt="Chornado Logo" class="img-fluid">
     </div>
+</div>
+<div class="row my-5">
+    <div class="col-8 col-md-6 col-lg-4 mx-auto">
+        <div class="row">
+            <h4 class="text-center">Login or <a href="/register">Register</a></h4>
+        </div>
+       <form action="/login" method="post" class="row">
+            {{ template_form.csrf_token() }}
+            <div class="row my-1">
+                {{ template_form.username(class="form-control", placeholder="Username") }}
+            </div>
+            <div class="row my-1">
+                {{ template_form.password(class="form-control", placeholder="Password") }}
+            </div>
+            <div class="col my-1 text-center">
+                {{ template_form.submit(class="btn btn-primary") }}
+            </div>
+        </form>
+    </div>
+</div>
 {% endblock %}
