--- a/chornado_app/templates/parents/children.html
+++ b/chornado_app/templates/parents/children.html
@@ -1,72 +1,95 @@
 {% extends "parents/_parent_base.html" %}
 
 {% block content %}
-    <div class="row">
+<div class="row mx-auto text-center">
+    <h2>Children</h2>
+</div>
+<div class="row mx-auto">
+    <div class="col">
         {% for child in child_data %}
-            <table class="table">
+        <form action="/parent/children" method="post" class="row">
+            {{ points_form.csrf_token }}
+            {{ points_form.child_id(value=child.id) }}
+            <div class="col">
+                <div class="row">
+                    <h2>{{ child.first_name }}</h2>            
+                </div>
+                <div class="row">
+                    <a href="{{ url_for('routes.delete_child', user_id=child.id) }}" class="child-link">Delete</a>
+                    <a href="{{ url_for('routes.pass_reset', user_id=child.id) }}" class="child-link">Reset Password</a>
+                </div>
+            </div>
+            <div class="col">
+                <h5>{{ child.points }} points</h5>
+            </div>
+            <div class="col-9 col-sm-7 col-md-5">
+                <div class="input-group">
+                    <span class="input-group-text">+/-</span>
+                    {{ points_form.points(value="0", class="point-adjust form-control") }}
+                    <span class="input-group-text">points</span>
+                    {{ points_form.adjust(class="btn btn-primary") }}
+                </div>
+            </div>
+        </form>
+        {% if child.count > 0 %}            
+        <table class ="table table-striped table-sm align-middle">
+            <thead>
+                <tr>
+                    <th scope="col" class="text-start">Chore</th>
+                    <th scope="col" class="text-end">Points</th>
+                    <th scope="col" class="text-end">Status</th>
+                    <th scope="col" class="text-end">Actions</th>
+                </tr>
+            </thead>
+            <tbody>
+            {% for chore in child.chores %}
                 <tr>
                     <form action="/parent/children" method="post">
-                        {{ points_form.csrf_token }}
-                        {{ points_form.child_id(value=child.id) }}
-                        <th scope="row" class="text-start"><h3>{{ child.first_name }}</h3></th>
-                        <td class="text-start">{{ child.points }} points</td>
-                        <td class="text-end">
-                            +/- {{ points_form.points(value="0") }} points
-                            {{ points_form.adjust }}
-                        </td>
-                        <td class="text-end">
-                            <a href="{{ url_for('routes.delete_child', user_id=child.id) }}">Delete</a>
-                            <a href="{{ url_for('routes.pass_reset', user_id=child.id) }}">Reset Password</a>
-                        </td>
+                        {{ chore_form.csrf_token() }}
+                        {{ chore_form.chore_id(value=chore.id) }}
+                            <th scope="row" class="text-start">{{ chore["name"] }}</th>
+                            <td class="text-end">{{ chore["points"] }}</td>
+                            <td class="text-end">{{ chore["state"] }}</td>
+                            <td class="text-end">
+                                {{ chore_form.delete(class="btn btn-primary mt-1") }}
+                                {{ chore_form.approve(class="btn btn-primary mt-1") }}
+                                {% if chore["state"] == "Complete" %}
+                                    {{ chore_form.reject(class="btn btn-primary mt-1") }}
+                                {% endif %}
+                            </td>
                     </form>
                 </tr>
-            </table>
-            {% if child.count > 0 %}            
-                <table class ="table">
-                    <thead>
-                        <tr>
-                            <th scope="col" class="text-start">Chore</th>
-                            <th scope="col" class="text-end">Points</th>
-                            <th scope="col" class="text-end">Status</th>
-                            <th scope="col" class="text-end">Actions</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for chore in child.chores %}
-                            <tr>
-                                <form action="/parent/children" method="post">
-                                    {{ chore_form.csrf_token() }}
-                                    {{ chore_form.chore_id(value=chore.id) }}
-                                        <th scope="row" class="text-start">{{ chore["name"] }}</th>
-                                        <td class="text-end">{{ chore["points"] }}</td>
-                                        <td class="text-end">{{ chore["state"] }}</td>
-                                        <td class="text-end">
-                                            {{ chore_form.delete() }}
-                                            {{ chore_form.approve() }}
-                                            {% if chore["state"] == "Complete" %}
-                                                {{ chore_form.reject() }}
-                                            {% endif %}
-                                        </td>
-                                </form>
-                            </tr>
-                        {% endfor %}
-                    </tbody>                        
-                </table>
-            {% endif %}
+            {% endfor %}
+            </tbody>                        
+        </table>
+        {% endif %}
         {% endfor %}
     </div>
-    <div class="row">
-        <form action="/parent/children" method="post">
-            {{ template_form.csrf_token() }}
-            {{ template_form.username.label }}
-            {{ template_form.username() }}<br>
-            {{ template_form.first_name.label }}
-            {{ template_form.first_name }}
-            {{ template_form.password.label }}
-            {{ template_form.password() }}
-            {{ template_form.confirm_password.label }}
-            {{ template_form.confirm_password }}
-            {{ template_form.submit() }}
-        </form>
+</div>
+<div class="row mx-auto">
+    <div class="row text-center">
+        <h3 class="mt-3">Create child</h3>
     </div>
+    <form action="/parent/children" method="post" class="row g-3 my-3">
+        {{ template_form.csrf_token() }}
+        <div class="col-md-6">
+            {{ template_form.username.label(class="form-label", for="inputUser") }}
+            {{ template_form.username(class="form-control", id="inputUser") }}
+        </div>
+        <div class="col-md-6">
+            {{ template_form.first_name.label(class="form-label", for="inputName") }}
+            {{ template_form.first_name(class="form-control", id="inputName") }}
+        </div>
+        <div class="col-md-6">
+            {{ template_form.password.label(class="form-label", for="inputPass") }}
+            {{ template_form.password(class="form-control", id="inputPass") }}
+        </div>
+        <div class="col-md-6">
+            {{ template_form.confirm_password.label(class="form-label", for="inputConfirm") }}
+            {{ template_form.confirm_password(class="form-control", id="inputConfirm") }}
+        </div>
+
+        {{ template_form.submit(class="btn btn-primary") }}
+    </form>
+</div>
 {% endblock %}
