--- a/chornado_app/templates/parents/settings.html
+++ b/chornado_app/templates/parents/settings.html
@@ -1,20 +1,34 @@
 {% extends "parents/_parent_base.html" %}
 
 {% block content %}
-    <div class="row">
+    <div class="row mx-auto text-center">
         <h3>Reset Password</h3>
-        <form action="/parent/settings", method="post">
+        <form action="/parent/settings" method="post" class="row g-3 my-3">
             {{ template_form.csrf_token }}
-            {{ template_form.old_password.label }}
-            {{ template_form.old_password }}
-            {{ template_form.new_password.label }}
-            {{ template_form.new_password }}
-            {{ template_form.confirm_password.label }}
-            {{ template_form.confirm_password }}
-            {{ template_form.submit }}
+            <div class="col">
+                {{ template_form.old_password.label(class="form-label", for="inputOld") }}
+                {{ template_form.old_password(class="form-control", id="inputOld") }}
+            </div>
+            <div class="col">
+                {{ template_form.new_password.label(class="form-label", for="inputPass") }}
+                {{ template_form.new_password(class="form-control", id="inputPass") }}
+            </div>
+            <div class="col">
+                {{ template_form.confirm_password.label(class="form-label", for="inputConfirm") }}
+                {{ template_form.confirm_password(class="form-control", id="inputConfirm") }}
+            </div>
+            <div class="row mx-auto text-center">
+                <div class="col">
+                {{ template_form.submit(class="btn btn-primary mt-3") }}
+                </div>
+            </div>
         </form>
     </div>
-    <div class="row">
-        <a href="{{ url_for('routes.delete_parent', user_id=parent.id) }}">Delete Account</a>
+    <div class="row mx-auto text-center">
+        <div class="col">
+            <a href="{{ url_for('routes.delete_parent', user_id=parent.id) }}" class="btn btn-danger">
+                Delete Account
+            </a>
+        </div>
     </div>
 {% endblock %}
