--- a/chornado_app/templates/login.html
+++ b/chornado_app/templates/login.html
@@ -9,7 +9,7 @@
                 <h2>Login</h2>                 
             </div>
             <div class="row my-1">
-                {{ template_form.username(class="form-control", placeholder="Username") }}
+                {{ template_form.username(class="form-control", placeholder="Username/Email") }}
             </div>
             <div class="row my-1">
                 {{ template_form.password(class="form-control", placeholder="Password") }}
