--- a/chornado_app/templates/index.html
+++ b/chornado_app/templates/index.html
@@ -25,4 +25,11 @@
         </form>
     </div>
 </div>
+<div class="row my-5 text-center">
+    <div class="col-10 col-md-8 col-lg-6 mx-auto">
+        <div class="embed-responsive embed-responsive-16by9">
+            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/Eo80DMoXrf4" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+    </div>
+</div>
 {% endblock %}
